# FPGA-inference

./: README.md
Agilev4/: .build_video.sh.un~  .moon_build.sh.un~  .moon_shoot.cpp.swp  process_result.hpp~  test_accuracy_tiny_yolov3_vmss  test_accuracy_yolov3_adas_pruned_0_9  test_accuracy_yolov3_bdd  test_accuracy_yolov3_voc_tf  test_jpeg_yolov3  test_performance_yolov3  test_video_yolov3
Agilev4-FPGA/: .moon_shoot.cpp.un~  .process_result.hpp.un~  build_video.sh  moon_build.sh~  test_accuracy_yolov3_mt  test_accuracy_yolov3_voc
Agilev4-FPGA/moonshoot/: .agilev4_moon_8class.txt.un~  .moon_build.sh.un~  agilev4_moon_8class.txt  moon_build.sh~  track_info.h
Agilev4-FPGA/moonshoot/sort/: .CMakeLists.txt.un~  CMakeLists.txt
Agilev4-FPGA/moonshoot/sort/include/: .tracker.h.un~  tracker.h
Agilev4-FPGA/moonshoot/sort/src/: .track.cpp.un~  kalman_filter.cpp  track.cpp  track.cpp~  tracker.cpp
Agilev4-FPGA/moonshoot_deepsort/: moon_build_deepsort_pedding.sh  network_sender.h  process_result.hpp  track_info.h
Agilev4-FPGA/moonshoot_deepsort/src/feature/: .model.h.un~  dataType.h  utils.cpp  utils.h
Agilev4-FPGA/moonshoot_deepsort/src/matching/: .track.h.un~  .tracker.h.un~  (+1 more)
Agilev4/moonshoot/: .agilev4_leaky_moon.txt.un~  .moon_shoot.cpp.un~  agilev4_leaky_moon.txt  moon_build.sh  moon_shoot  moon_shoot.cpp  moon_shoot.cpp~  moon_shoot_backup.cpp
Agilev4/moonshoot/sort/: CMakeLists.txt~
Agilev4/moonshoot_deepsort/: .moon_build_deepsort_pedding.sh.un~  .track_info.h.un~  Makefile  moon_build_deepsort_pedding.sh~  moon_shoot_deepsort_pending.cpp  network_sender.cpp
data_transmission-Nano/UDP/: Server  Server.cpp  ros_build.sh  ros_publish  ros_publish.cpp
(+9 files in other folders)
